--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <h1>
-      <span class="visually-hidden">Город Sedona</span>
-    </h1>
+
     <header class="mane-header">
       <nav class="navigation">
         <a class="logo" href="index.html">
@@ -45,10 +43,10 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <h2>
+        <h1>
           <span class="visually-hidden">Sedona</span>
-          <img src="#" alt="Природа Седоны">
-        </h2>
+          <img src="#" alt="Седона">
+        </h1>
       </section>
       <section class="hero-advantages">
         <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
