--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </h1>
       </section>
       <section class="hero-advantages">
-        <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+        <h2 class="visually-hidden">Sedona</h2>
+        <p class="lead">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="advantages">
