Изменяет тип списка ,пагинация

--- a/catalog.html
+++ b/catalog.html
@@ -175,7 +175,7 @@
             </div>
           </li>
         </ul>
-        <ul class="pagination">
+        <ol class="pagination">
           <li class="pagination-item">
             <a class="pagination-link" href="#">1</a>
           </li>
@@ -194,7 +194,7 @@
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
           </li>
-        </ul>
+        </ol>
       </section>
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
