убирает тег img

--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
         <ul class="menu">
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="#" alt="поиск гостиницы">
+              <span class="visually-hidden">Поиск гостиницы</span>
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="#" alt="избранное">
+              <span class="visually-hidden">избранное</span>
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-button" href="#">Хочу сюда!</a>
+            <span class="visually-hidden">Хочу сюда!</span>
+            </a>
           </li>
         </ul>
       </nav>
