--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы и звёзды">
+              <img src="images/hotel-1.jpg" width="300" height="212" alt="горы и звёзды">
               <h3 class="product-card-title">Amara Resort & Spa</h3>
             </a>
             <span class="product-card-price">От 4000 Р</span>
@@ -137,7 +137,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы и радуга">
+              <img src="images/hotel-2.jpg" width="300" height="212" alt="горы и радуга">
               <h3 class="product-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="product-card-price">От 5000Р</span>
@@ -150,7 +150,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы">
+              <img src="images/hotel-3.jpg" width="300" height="212" alt="горы">
               <h3 class="product-card-title">Desert Quail Inn</h3>
             </a>
             <span class="product-card-price">От 2500 Р</span>
@@ -163,7 +163,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы,ночное небо">
+              <img src="images/hotel-4.jpg" width="300" height="212" alt="горы,ночное небо">
               <h3 class="product-card-title">GreenTree Inn</h3>
             </a>
             <span class="product-card-price">От 1500 Р</span>
