--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css\style.css" rel="stylesheet">
   </head>
 
   <body>
     <header class="mane-header">
       <a class="logo" href="index.html">
-        <img src="#" alt=" логотип города Sedona">
+        <img src="images/logo-sedona.svg" width="138" height="64" alt=" логотип города Sedona">
       </a>
       <nav class="navigation">
         <ul class="site-navigation">
@@ -58,7 +59,7 @@
           <li class="advantages-item">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" alt="улица города">
+            <img src="images/photo-1.jpg" width="800" height="385" alt="улица города">
           </li>
           <li class="advantages-item">
             <h3>Небольшая площадь</h3>
@@ -75,7 +76,7 @@
           <li class="advantages-item">
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="#" alt="каньён">
+            <img src="images/photo-2.jpg" width="800" height="385" alt="каньён">
           </li>
         </ul>
         <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
