добавляет векторную графику.

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="mane-header">
       <a class="logo" href="index.html">
-        <img src="#" alt=" логотип города Sedona">
+        <img src="images/Frame-19.svg" width="140" height="70" alt=" логотип города Sedona">
       </a>
       <nav class="navigation">
         <ul class="site-navigation">
@@ -227,7 +227,7 @@
       </ul>
       <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/">
-        <img src="#" width="138" height="64" alt=" Логотип .html academy">
+        <img src="images/Logo-htmlacademy.svg" width="115" height="33" alt=" Логотип .html academy">
       </a>
     </footer>
   </body>
