--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="mane-header">
       <a class="logo" href="index.html">
-        <img src="images/logo-sedona.svg" width="138" height="64" alt=" логотип города Sedona">
+        <img src="images/Frame-19.svg" width="140" height="70" alt=" логотип города Sedona">
       </a>
       <nav class="navigation">
         <ul class="site-navigation">
@@ -46,7 +46,7 @@
       <section class="hero">
         <h1>
           <span class="visually-hidden">Sedona</span>
-          <img src="#" alt="Седона">
+          <img src="images/welcome-hero.svg" width="458" height="352" alt="добро пожаловать в Седону">
         </h1>
       </section>
       <section class="hero-advantages">
@@ -132,7 +132,7 @@
       </ul>
       <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/">
-        <img src="#" width="138" height="64" alt=" Логотип .html academy">
+        <img src="images/Logo-htmlacademy.svg" width="115" height="33" alt=" Логотип .html academy">
       </a>
     </footer>
   </body>
