Добавляет декор элементы на главную

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li class="menu-item">
             <a class="menu-link" href="#">
               <span class="visually-hidden">избранное</span>
+              <span class="notification-badge">12</span>
             </a>
           </li>
           <li class="menu-item">
@@ -44,10 +45,9 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <h1>
-          <span class="visually-hidden">Sedona</span>
-          <img src="images/welcome-hero.svg" width="458" height="352" alt="добро пожаловать в Седону">
-        </h1>
+        <h1><span class="visually-hidden">Sedona</span></h1>
+        <img src="images/sedona.svg" width="456.7" height="212.77" alt="добро пожаловать в Седону">
+
       </section>
       <section class="hero-advantages">
         <h2 class="visually-hidden">Sedona</h2>
