--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link href="css\style.css" rel="stylesheet">
+    <title>HTML Academy:Седона</title>
   </head>
 
   <body>
@@ -37,8 +36,8 @@
             </a>
           </li>
           <li class="menu-item">
-            <span class="visually-hidden">Хочу сюда!</span>
-            </a>
+            <a class="menu-button" href="#">Хочу сюда!</a>
+          </li>
           </li>
         </ul>
       </nav>
@@ -46,7 +45,7 @@
     <main class="main-index">
       <section class="hero">
         <h1><span class="visually-hidden">Sedona</span></h1>
-        <img src="images/sedona.svg" width="456.7" height="212.77" alt="добро пожаловать в Седону">
+        <img src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
 
       </section>
       <section class="hero-advantages">
@@ -116,17 +115,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="#" alt="Vkontakte" width="24" height="14">
+            <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="#" alt="Telegram" width="24" height="14">
+            <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="#" alt="Youtube" width="24" height="14">
+            <span class="visually-hidden">Youtube</span>
           </a>
         </li>
       </ul>
