--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="mane-header">
       <a class="logo" href="index.html">
-        <img src="images/logo-sedona.svg" width="140" height="70" alt=" логотип города Sedona">
+        <img src="images/logo-sedona.svg" width="140" height="70" alt="логотип города Sedona">
       </a>
       <nav class="navigation">
         <ul class="site-navigation">
@@ -26,12 +26,13 @@
         <ul class="menu">
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="#" alt="поиск гостиницы">
+              <span class="visually-hidden">Поиск гостиницы</span>
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="#" alt="избранное">
+              <span class="visually-hidden">избранное</span>
+              <span class="notification-badge">12</span>
             </a>
           </li>
           <li class="menu-item">
@@ -211,23 +212,23 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="#" alt="Vkontakte" width="24" height="14">
+            <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="#" alt="Telegram" width="24" height="14">
+            <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="#" alt="Youtube" width="24" height="14">
+            <span class="visually-hidden">Youtube</span>
           </a>
         </li>
       </ul>
       <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/">
-        <img src="images/htmlacademy.svg" width="115" height="33" alt=" Логотип .html academy">
+        <img src="images/htmlacademy.svg" width="115" height="33" alt="Логотип HTML-academy">
       </a>
     </footer>
   </body>
