--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </ul>
       <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/">
-        <img src="images/htmlacademy.svg" width="115" height="33" alt=" Логотип .html academy">
+        <img src="images/htmlacademy.svg" width="115" height="33" alt="Логотип HTML-academy">
       </a>
     </footer>
   </body>
