--- a/3/index.html
+++ b/3/index.html
@@ -3,15 +3,14 @@
 
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link href="css\style.css" rel="stylesheet">
+    <title>HTML Academy:Седона</title>
     <base href="https://htmlacademy-htmlcss.github.io/2518753-sedona-1/3/">
 </head>
 
   <body>
     <header class="mane-header">
       <a class="logo" href="index.html">
-        <img src="images/Frame-19.svg" width="140" height="70" alt=" логотип города Sedona">
+        <img src="images/logo-sedona.svg" width="140" height="70" alt=" логотип города Sedona">
       </a>
       <nav class="navigation">
         <ul class="site-navigation">
@@ -38,8 +37,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <span class="visually-hidden">Хочу сюда!</span>
-            </a>
+            <a class="menu-button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -47,8 +45,7 @@
     <main class="main-index">
       <section class="hero">
         <h1><span class="visually-hidden">Sedona</span></h1>
-        <img src="images/sedona.svg" width="456.7" height="212.77" alt="добро пожаловать в Седону">
-
+        <img src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
       </section>
       <section class="hero-advantages">
         <h2 class="visually-hidden">Sedona</h2>
@@ -117,23 +114,23 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="#" alt="Vkontakte" width="24" height="14">
+            <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="#" alt="Telegram" width="24" height="14">
+            <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="#" alt="Youtube" width="24" height="14">
+            <span class="visually-hidden">Youtube</span>
           </a>
         </li>
       </ul>
       <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/">
-        <img src="images/Logo-htmlacademy.svg" width="115" height="33" alt=" Логотип .html academy">
+        <img src="images/htmlacademy.svg" width="115" height="33" alt="Логотип HTML-academy">
       </a>
     </footer>
   </body>
