--- a/index.html
+++ b/index.html
@@ -91,16 +91,22 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
           <li class="services-item">
-            <h3>Жилье</h3>
-            <p>Рекомендуем пожитьв настоящем мотеле,всё как в кино!</p>
+            <div class="services-item-housing">
+              <h3>Жилье</h3>
+              <p>Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+            </div>
           </li>
           <li class="services-item">
+            <div class="services-item-food">
             <h3>Еда</h3>
             <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </div>
           </li>
           <li class="services-item">
+            <div class="services-item-souvenirs">
             <h3>Сувениры</h3>
             <p>Не только китайского,но и настоящего местного производства!</p>
+          </div>
           </li>
         </ul>
       </section>
