--- a/catalog.html
+++ b/catalog.html
@@ -43,160 +43,162 @@
       </nav>
     </header>
     <main class="main-inner">
-      <header class="inner-header">
-        <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs-item">
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">
-              <span class="visually-hidden">Главная</span>
-            </a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Гостиницы</a>
-          </li>
-        </ul>
-      </header>
-      <section class="catalog-products">
-        <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
-        <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Инфраструктура</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="checkbox" name="swimming pool" checked>
-                  Бассейн
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="checkbox" name="parking" checked>
-                  Парковка
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="checkbox" name="Wi-Fi">
-                  Wi-Fi
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Тип жилья</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="radio" name="product-group" checked>
-                  Гостиница
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="radio" name="product-group">
-                  Мотель
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="control">
-                  <input class="control-input" type="radio" name="product-group">
-                  Апартаменты
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="button" type="submit">Применить</button>
-          <button class="button" type="reset">Сбросить</button>
-        </form>
-        <p class="page-search">Страниц найдено:38</p>
-        <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешёвые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="rating">По рейтингу</option>
-        </select>
-        <a href="#" class="button-filter">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a href="#" class="button-filter">
-          <span class="visually-hidden">Показать карточку</span>
-        </a>
-        <a href="#" class="button-filter">
-          <span class="visually-hidden">Показать список</span>
-        </a>
-        <ul class="product-list">
-          <li class="product-card">
-            <a class="product-card-link" href="product.html">
-              <img src="images/hotel-1.jpg" width="300" height="212" alt="горы и звёзды">
-              <h3 class="product-card-title">Amara Resort & Spa</h3>
-            </a>
-            <span class="product-card-price">От 4000 Р</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранном</a>
-            <div class="star-rating">
-              <div class="stars"></div>
-              <div class="rating">Рейтинг: 8,5</div>
-            </div>
-          </li>
-          <li class="product-card">
-            <a class="product-card-link" href="product.html">
-              <img src="images/hotel-2.jpg" width="300" height="212" alt="горы и радуга">
-              <h3 class="product-card-title">Villas at Poco Diablo</h3>
-            </a>
-            <span class="product-card-price">От 5000Р</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранном</a>
-            <div class="star-rating">
-              <div class="stars"></div>
-              <div class="rating">Рейтинг: 9,2</div>
-            </div>
-          </li>
-          <li class="product-card">
-            <a class="product-card-link" href="product.html">
-              <img src="images/hotel-3.jpg" width="300" height="212" alt="горы">
-              <h3 class="product-card-title">Desert Quail Inn</h3>
-            </a>
-            <span class="product-card-price">От 2500 Р</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранном</a>
-            <div class="star-rating">
-              <div class="stars"></div>
-              <div class="rating">Рейтинг: 6,9</div>
-            </div>
-          </li>
-          <li class="product-card">
-            <a class="product-card-link" href="product.html">
-              <img src="images/hotel-4.jpg" width="300" height="212" alt="горы,ночное небо">
-              <h3 class="product-card-title">GreenTree Inn</h3>
-            </a>
-            <span class="product-card-price">От 1500 Р</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранном</a>
-            <div class="star-rating">
-              <div class="stars"></div>
-              <div class="rating">Рейтинг: 5,0</div>
-            </div>
-          </li>
-        </ul>
-        <ol class="pagination">
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">4</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">...</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
-          </li>
-        </ol>
+      <div class="filter-background">
+        <header class="inner-header">
+          <h2 class="inner-header-title">Гостиницы Седоны</h2>
+          <ul class="breadcrumbs-item">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html">
+                <span class="visually-hidden">Главная</span>
+              </a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Гостиницы</a>
+            </li>
+          </ul>
+        </header>
+        <section class="catalog-products">
+          <h3 class="visually-hidden">Список гостиниц с фильтрами</h3>
+          <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Инфраструктура</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="checkbox" name="swimming pool" checked>
+                    Бассейн
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="checkbox" name="parking" checked>
+                    Парковка
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="checkbox" name="Wi-Fi">
+                    Wi-Fi
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Тип жилья</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group" checked>
+                    Гостиница
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group">
+                    Мотель
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group">
+                    Апартаменты
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <button class="button" type="submit">Применить</button>
+            <button class="button" type="reset">Сбросить</button>
+          </form>
+      </div>
+      <p class="page-search">Найдено гостиниц: 38</p>
+      <select class="select-control" aria-label="Сортировка">
+        <option value="cheap">Сначала дешёвые</option>
+        <option value="expensive">Сначала дорогие</option>
+        <option value="rating">По рейтингу</option>
+      </select>
+      <a href="#" class="button-filter">
+        <span class="visually-hidden">Показать карточки</span>
+      </a>
+      <a href="#" class="button-filter">
+        <span class="visually-hidden">Показать карточку</span>
+      </a>
+      <a href="#" class="button-filter">
+        <span class="visually-hidden">Показать список</span>
+      </a>
+      <ul class="product-list">
+        <li class="product-card">
+          <a class="product-card-link" href="product.html">
+            <img src="images/hotel-1.jpg" width="300" height="212" alt="горы и звёзды">
+            <h3 class="product-card-title">Amara Resort & Spa</h3>
+          </a>
+          <span class="product-card-price">От 4000 Р</span>
+          <a class="product-card-button" href="#">Подробнее</a>
+          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <div class="star-rating">
+            <div class="stars"></div>
+            <div class="rating">Рейтинг: 8,5</div>
+          </div>
+        </li>
+        <li class="product-card">
+          <a class="product-card-link" href="product.html">
+            <img src="images/hotel-2.jpg" width="300" height="212" alt="горы и радуга">
+            <h3 class="product-card-title">Villas at Poco Diablo</h3>
+          </a>
+          <span class="product-card-price">От 5000Р</span>
+          <a class="product-card-button" href="#">Подробнее</a>
+          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <div class="star-rating">
+            <div class="stars"></div>
+            <div class="rating">Рейтинг: 9,2</div>
+          </div>
+        </li>
+        <li class="product-card">
+          <a class="product-card-link" href="product.html">
+            <img src="images/hotel-3.jpg" width="300" height="212" alt="горы">
+            <h3 class="product-card-title">Desert Quail Inn</h3>
+          </a>
+          <span class="product-card-price">От 2500 Р</span>
+          <a class="product-card-button" href="#">Подробнее</a>
+          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <div class="star-rating">
+            <div class="stars"></div>
+            <div class="rating">Рейтинг: 6,9</div>
+          </div>
+        </li>
+        <li class="product-card">
+          <a class="product-card-link" href="product.html">
+            <img src="images/hotel-4.jpg" width="300" height="212" alt="горы,ночное небо">
+            <h3 class="product-card-title">GreenTree Inn</h3>
+          </a>
+          <span class="product-card-price">От 1500 Р</span>
+          <a class="product-card-button" href="#">Подробнее</a>
+          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <div class="star-rating">
+            <div class="stars"></div>
+            <div class="rating">Рейтинг: 5,0</div>
+          </div>
+        </li>
+      </ul>
+      <ol class="pagination">
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">1</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">2</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">3</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">4</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">...</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">10</a>
+        </li>
+      </ol>
       </section>
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
