--- a/catalog.html
+++ b/catalog.html
@@ -131,9 +131,10 @@
             <img src="images/hotel-1.jpg" width="300" height="212" alt="горы и звёзды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
-          <span class="product-card-price">От 4000 Р</span>
+          <p>Гостиница</p>
+          <span class="product-card-price">От 4000 ₽</span>
           <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <a class="product-card-button-favorites" href="#">В избранноe</a>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 8,5</div>
@@ -144,9 +145,10 @@
             <img src="images/hotel-2.jpg" width="300" height="212" alt="горы и радуга">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
-          <span class="product-card-price">От 5000Р</span>
+          <p>Гостиница</p>
+          <span class="product-card-price">От 5000 ₽</span>
           <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <a class="product-card-button-favorites" href="#">В избранноe</a>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 9,2</div>
@@ -157,9 +159,10 @@
             <img src="images/hotel-3.jpg" width="300" height="212" alt="горы">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
-          <span class="product-card-price">От 2500 Р</span>
+          <p>Гостиница</p>
+          <span class="product-card-price">От 2500 ₽</span>
           <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <a class="product-card-button-favorites" href="#">В избранноe</a>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 6,9</div>
@@ -170,9 +173,10 @@
             <img src="images/hotel-4.jpg" width="300" height="212" alt="горы,ночное небо">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
-          <span class="product-card-price">От 1500 Р</span>
+          <p>Гостиница</p>
+          <span class="product-card-price">От 1500 ₽</span>
           <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранном</a>
+          <a class="product-card-button-favorites" href="#">В избранноe</a>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 5,0</div>
