--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,7 @@
         </li>
       </ol>
       </section>
-      <section class="subscription">
+      <section class="subscription-catalog">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
