--- a/index.html
+++ b/index.html
@@ -80,23 +80,17 @@
       <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
       <p>Опытный персонал и качественное обслуживание!</p>
       <ul class="services-list">
-        <li class="services-item">
-          <div class="services-item-housing">
+        <li class="services-item services-item-housing">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
-          </div>
         </li>
-        <li class="services-item">
-          <div class="services-item-food">
+        <li class="services-item services-item-food">
             <h3>Еда</h3>
             <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </div>
         </li>
-        <li class="services-item">
-          <div class="services-item-souvenirs">
+        <li class="services-item services-item-souvenirs">
             <h3>Сувениры</h3>
             <p>Не только китайского,но и настоящего местного производства!</p>
-          </div>
         </li>
       </ul>
     </section>
