Меняет див на секцию
Перенес стили из li  в ul , проверил ссылки нновые добавляются в заданных стилях

--- a/catalog.html
+++ b/catalog.html
@@ -43,9 +43,8 @@
       </nav>
     </header>
     <main class="main-inner">
-      <div class="filter-background">
-        <header class="inner-header">
-          <h2 class="inner-header-title">Гостиницы Седоны</h2>
+      <section class="filter-background">
+          <h1 class="inner-header-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs-item">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
@@ -56,8 +55,6 @@
               <a class="breadcrumbs-link">Гостиницы</a>
             </li>
           </ul>
-        </header>
-        <section class="catalog-products">
           <h3 class="visually-hidden">Список гостиниц с фильтрами</h3>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
             <fieldset class="catalog-filter-group">
@@ -109,7 +106,8 @@
             <button class="button" type="submit">Применить</button>
             <button class="button" type="reset">Сбросить</button>
           </form>
-      </div>
+        </section>
+
       <p class="page-search">Найдено гостиниц: 38</p>
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешёвые</option>
