--- a/catalog.html
+++ b/catalog.html
@@ -181,7 +181,7 @@
         </div>
       </li>
     </ul>
-    <ol class="pagination">
+    <ul class="pagination">
       <li class="pagination-item">
         <a class="pagination-link" href="#">1</a>
       </li>
@@ -200,7 +200,7 @@
       <li class="pagination-item">
         <a class="pagination-link" href="#">10</a>
       </li>
-    </ol>
+    </ul>
     </section>
     <section class="subscription-catalog">
       <h2>Подпишитесь на рассылку</h2>
