--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
   </header>
   <main class="main-index">
     <section class="hero">
-      <h1><span class="visually-hidden">Sedona</span></h1>
+      <h1><span class="visually-hidden"> Город Sedona</span></h1>
       <img src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
     </section>
-    <section class="hero-advantages">
-      <h2 class="visually-hidden">Sedona</h2>
+    <div class="hero-advantages">
       <p class="lead">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
       <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-    </section>
+    </div>
     <section class="advantages">
       <ul class="advantages-list">
         <li class="advantages-item advantages-item-city">
