--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
     </div>
     <section class="advantages">
+      <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list">
         <li class="advantages-item advantages-item-city">
           <h3>Настоящий городок</h3>
