--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
         </li>
       </ul>
     </section>
-    <section class="search-hotel">
-      <h2>Заинтересовались?</h2>
+    <div class="search-hotel">
+      <p class="search-hotel-question">Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
-    </section>
+    </div>
     <section class="subscription">
       <h2>Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
