--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list">
-        <li class="advantages-item advantages-item-city">
+        <li class="advantages-item advantages-item-wide">
           <h3>Настоящий городок</h3>
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="images/photo-1.jpg" width="800" height="385" alt="улица города">
         </li>
-        <li class="advantages-item advantages-item-square">
+        <li class="advantages-item">
           <h3>Небольшая площадь</h3>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="advantages-item advantages-item-road">
+        <li class="advantages-item">
           <h3>Красивая дорога</h3>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="advantages-item advantages-item-tourists">
+        <li class="advantages-item">
           <h3>Мало туристов</h3>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
-        <li class="advantages-item advantages-item-bridge">
+        <li class="advantages-item advantages-item-wide">
           <h3>Там есть мост дьявола</h3>
           <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           <img src="images/photo-2.jpg" width="800" height="385" alt="каньён">
