--- a/4/index.html
+++ b/4/index.html
@@ -45,34 +45,34 @@
   </header>
   <main class="main-index">
     <section class="hero">
-      <h1><span class="visually-hidden">Sedona</span></h1>
+      <h1><span class="visually-hidden"> Город Sedona</span></h1>
       <img src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
     </section>
-    <section class="hero-advantages">
-      <h2 class="visually-hidden">Sedona</h2>
+    <div class="hero-advantages">
       <p class="lead">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
       <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-    </section>
+    </div>
     <section class="advantages">
+      <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list">
-        <li class="advantages-item advantages-item-city">
+        <li class="advantages-item advantages-item-wide">
           <h3>Настоящий городок</h3>
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="images/photo-1.jpg" width="800" height="385" alt="улица города">
         </li>
-        <li class="advantages-item advantages-item-square">
+        <li class="advantages-item">
           <h3>Небольшая площадь</h3>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="advantages-item advantages-item-road">
+        <li class="advantages-item">
           <h3>Красивая дорога</h3>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="advantages-item advantages-item-tourists">
+        <li class="advantages-item">
           <h3>Мало туристов</h3>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
-        <li class="advantages-item advantages-item-bridge">
+        <li class="advantages-item advantages-item-wide">
           <h3>Там есть мост дьявола</h3>
           <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           <img src="images/photo-2.jpg" width="800" height="385" alt="каньён">
@@ -95,11 +95,11 @@
         </li>
       </ul>
     </section>
-    <section class="search-hotel">
-      <h2>Заинтересовались?</h2>
+    <div class="search-hotel">
+      <p class="search-hotel-question">Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
-    </section>
+    </div>
     <section class="subscription">
       <h2>Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
