--- a/4/index.html
+++ b/4/index.html
@@ -96,7 +96,7 @@
       </ul>
     </section>
     <div class="search-hotel">
-      <p class="search-hotel-question">Заинтересовались?</h2>
+      <p class="search-hotel-question">Заинтересовались?</p>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
     </div>
