--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="page-container">
   <header class="mane-header">
     <a class="logo" href="index.html">
       <img src="images/logo-sedona.svg" width="140" height="70" alt=" логотип города Sedona">
@@ -133,6 +134,7 @@
       <img src="images/htmlacademy.svg" width="115" height="33" alt="Логотип HTML-academy">
     </a>
   </footer>
+</div>
 </body>
 
 </html>
