делает sticky-footer.
Не понял работает или нет. Ничего не меняется.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </nav>
     </div>
   </header>
-  <main class="main-index">
+  <main class="main-index  main-container">
     <section class="hero">
       <h1><span class="visually-hidden"> Город Sedona</span></h1>
       <img class="welcome" src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
