--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <header class="mane-header">
+  <header class="main-header">
     <a class="logo" href="index.html">
       <img src="images/logo-sedona.svg" width="140" height="70" alt="логотип города Sedona">
     </a>
