--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
       </nav>
     </div>
   </header>
-  <main class="main-inner">
+  <main class="main-inner main-container">
     <section class="filter-background">
       <h1 class="inner-header-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs-item">
