--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="container-site">
   <header class="main-header">
     <div class="header-container">
       <a class="logo" href="index.html">
@@ -142,6 +143,7 @@
       </a>
     </div>
   </footer>
+</div>
 </body>
 
 </html>
