Переносит див после футер

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="advantages-item-img">
               <img src="images/photo-1.jpg" width="800" height="385" alt="улица города">
-              <div>
+            </div>
           </li>
           <li class="advantages-item advantages-item-text ">
             <h3>Небольшая площадь</h3>
