Задает высоту ПРИЕЗЖАЙТЕ В СЕДОНУ

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
             </div>
           </li>
         </ul>
-        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p>Опытный персонал и качественное обслуживание!</p>
+        <div class="advantages-item-container">
+          <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p>Опытный персонал и качественное обслуживание!</p>
+        </div>
         <ul class="services-list">
           <li class="services-item ">
             <h3>Жилье</h3>
