--- a/catalog.html
+++ b/catalog.html
@@ -205,6 +205,7 @@
           </div>
         </li>
       </ul>
+      <div class="create-line"></div>
       <ul class="pagination">
         <li class="pagination-item">
           <a class="pagination-link" href="#">1</a>
