Выравниваю подписку на странице каталога.

--- a/catalog.html
+++ b/catalog.html
@@ -156,13 +156,13 @@
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <div class="card-price-container">
-          <p>Гостиница</p>
-          <span class="product-card-price">От 5000 ₽</span>
-        </div>
-        <div class="card-button-container">
-          <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранноe</a>
-        </div>
+            <p>Гостиница</p>
+            <span class="product-card-price">От 5000 ₽</span>
+          </div>
+          <div class="card-button-container">
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+          </div>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 9,2</div>
@@ -174,13 +174,13 @@
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <div class="card-price-container">
-          <p>Гостиница</p>
-          <span class="product-card-price">От 2500 ₽</span>
-        </div>
-        <div class="card-button-container">
-          <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранноe</a>
-        </div>
+            <p>Гостиница</p>
+            <span class="product-card-price">От 2500 ₽</span>
+          </div>
+          <div class="card-button-container">
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+          </div>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 6,9</div>
@@ -192,13 +192,13 @@
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <div class="card-price-container">
-          <p>Гостиница</p>
-          <span class="product-card-price">От 1500 ₽</span>
-        </div>
-        <div class="card-button-container">
-          <a class="product-card-button" href="#">Подробнее</a>
-          <a class="product-card-button-favorites" href="#">В избранноe</a>
-        </div>
+            <p>Гостиница</p>
+            <span class="product-card-price">От 1500 ₽</span>
+          </div>
+          <div class="card-button-container">
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
+          </div>
           <div class="star-rating">
             <div class="stars"></div>
             <div class="rating">Рейтинг: 5,0</div>
@@ -226,8 +226,8 @@
           <a class="pagination-link" href="#">10</a>
         </li>
       </ul>
-      <div class="subscription-catalog-container">
-        <section class="subscription-catalog">
+      <section class="subscription-catalog">
+        <div class="subscription-container">
           <h2>Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -236,8 +236,9 @@
               id="subscription-email" required>
             <button class="button subscription-button" type="submit">Подписаться</button>
           </form>
-        </section>
-      </div>
+        </div>
+      </section>
+
     </main>
     <footer class="main-footer">
       <ul class="social-list">
