Выравнивает навигацию и соц сети
Сделал через геп и через флекс(с заданной шириной.)

--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vkontakte</span>
+            <span class="visually-hidden">Vk</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
+            <span class="visually-hidden">TG</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Youtube</span>
+            <span class="visually-hidden">YT</span>
           </a>
         </li>
       </ul>
