Переделывает счетчик страниц и пагинацию

--- a/catalog.html
+++ b/catalog.html
@@ -205,7 +205,6 @@
           </div>
         </li>
       </ul>
-      <div class="create-line"></div>
       <ul class="pagination">
         <li class="pagination-item">
           <a class="pagination-link" href="#">1</a>
@@ -244,17 +243,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vkontakte</span>
+            <span class="visually-hidden">Vk</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
+            <span class="visually-hidden">TG</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Youtube</span>
+            <span class="visually-hidden">YT</span>
           </a>
         </li>
       </ul>
