Делает правильное подчеркивание пункта меню (активного))

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
               <li class="site-navigation-item">
                 <a class="navigation-link" href="about.html">О седоне</a>
               </li>
-              <li class="site-navigation-item">
+              <li class="site-navigation-item active">
                 <a class="navigation-link" href="catalog.html">Гостиницы</a>
               </li>
             </ul>
