--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav class="navigation">
           <ul class="site-navigation">
-            <li class="site-navigation-item">
+            <li class="site-navigation-item active">
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="site-navigation-item">
