Добавляет активное состояние для вариантов отображения списков карточек

--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
             <option value="rating">По рейтингу</option>
           </select>
           <div class="button-filter-container">
-            <a href="#" class="button-filter">
+            <a href="#" class="button-filter button-filter-active">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
