--- a/catalog.html
+++ b/catalog.html
@@ -158,7 +158,7 @@
                   <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" />
                 </g>
                 <defs>
-                  <clipPath id="a">
+                  <clipPath id="b">
                     <path fill="#fff" d="M0 0h16v14H0z" />
                   </clipPath>
                 </defs>
@@ -173,7 +173,7 @@
                     d="M2 0H0v2h2V0Zm14 0H4v2h12V0ZM2 4H0v2h2V4Zm14 0H4v2h12V4ZM2 8H0v2h2V8Zm14 0H4v2h12V8ZM2 12H0v2h2v-2Zm14 0H4v2h12v-2Z" />
                 </g>
                 <defs>
-                  <clipPath id="a">
+                  <clipPath id="c">
                     <path fill="#fff" d="M0 0h16v14H0z" />
                   </clipPath>
                 </defs>
