добавляет состояние вариантом раскладки карточек

--- a/catalog.html
+++ b/catalog.html
@@ -131,13 +131,13 @@
         </section>
         <div class="select-container">
           <p class="page-search">Найдено гостиниц: <span>38</span></p>
-          <select class="select-control" aria-label="Сортировка">
+          <select class="select-control border-state" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="rating">По рейтингу</option>
           </select>
           <div class="button-filter-container">
-            <a href="#" class="button-filter button-filter-active">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -151,7 +151,7 @@
               </svg>
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button-filter">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -165,7 +165,7 @@
               </svg>
               <span class="visually-hidden">Показать карточку</span>
             </a>
-            <a href="#" class="button-filter">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -206,7 +206,7 @@
             <p>Гостиница</p>
             <span class="product-card-price">От 5000 ₽</span>
             <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-favorites-active button-state" href="#">В избранноe</a>
+            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
