Добавляет состояние pagination

--- a/catalog.html
+++ b/catalog.html
@@ -246,7 +246,7 @@
         </ul>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link active-pagination" href="catalog.html">1</a>
+            <a class="pagination-link > href="catalog.html">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
