--- a/catalog.html
+++ b/catalog.html
@@ -131,7 +131,7 @@
         </section>
         <div class="select-container">
           <p class="page-search">Найдено гостиниц: <span>38</span></p>
-          <select class="select-control border-state" aria-label="Сортировка">
+          <select class="select-control" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="rating">По рейтингу</option>
@@ -246,7 +246,7 @@
         </ul>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link > href="catalog.html">1</a>
+            <a class="pagination-link  pagination-active" href="#">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
