Задает состояние .breadcrumbs-item

--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,7 @@
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="index.html">
-                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="13" height="13"
+                  <svg class="breadcrumbs-link" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="13" height="13"
                     fill="none">
                     <path fill="#fff" d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z" />
                     <path fill="#fff" d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z" />
@@ -123,8 +123,8 @@
                 </ul>
               </fieldset>
               <div class="button-container-filter">
-                <button class="button-catalog-filter button-submit "  type="submit">Применить</button>
-                <button class="button-catalog-filter button-reset"  type="reset">Сбросить</button>
+                <button class="button-catalog-filter button-submit " type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
               </div>
             </form>
           </div>
