--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <label for="subscription-email"></label>
               <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email"
                 id="subscription-email" required>
-              <button class="button-subscription-button button-state" type="submit">Подписаться</button>
+              <button class="button-subscription-button" type="submit">Подписаться</button>
             </form>
           </div>
         </section>
